Everything works till parse table

--- a/modules/parser/Makefile
+++ b/modules/parser/Makefile
@@ -3,4 +3,18 @@
 compile:
 	gcc create_parse_table.c create_parse_tree.c find_first_recursive.c read_ff.c \
 	read_grammer.c ../../utils/stack.c ../../utils/tree.c ../../utils/token.c \
-	-o parser.exe
+	-o ./bin/parser.exe
+
+test_grammer:
+	gcc ./tests/test_grammer.c read_grammer.c  ../../utils/token.c -o ./bin/test_grammer.exe
+
+test_read_ff:
+		gcc ./tests/test_read_ff.c read_ff.c  ../../utils/token.c -o ./bin/test_read_ff.exe
+
+test_find_ff:
+	gcc ./tests/test_find_ff.c find_first_and_follow.c  read_grammer.c \
+	find_first.c find_follow.c ../../utils/token.c -o ./bin/test_find_ff.exe
+
+test_parse_table:
+	gcc ./tests/test_parse_table.c create_parse_table.c read_ff.c read_grammer.c \
+	find_first_recursive.c ../../utils/token.c -o ./bin/test_parse_table.exe
