added error handling for lexer

--- a/modules/lexer/Makefile
+++ b/modules/lexer/Makefile
@@ -3,4 +3,4 @@
 test_lexer:
 	gcc create_token.c get_stream.c remove_comments.c \
 	patterns.c get_tokens.c ./tests/test_lexer.c ../../utils/keyword.c \
-	-o ./bin/test_lexer.exe
+	../../utils/token.c -o ./bin/test_lexer.exe
