Tree works perfectly :) but some bug with find first :(

--- a/modules/parser/Makefile
+++ b/modules/parser/Makefile
@@ -16,7 +16,7 @@ test_find_ff:
 	find_first.c find_follow.c ../../utils/token.c -o ./bin/test_find_ff.exe
 
 test_parse_table:
-	gcc create_parse_table.c find_first_and_follow.c \
+	gcc create_parse_table.c find_first_and_follow.c  read_ff.c \
 	read_grammer.c find_first.c find_follow.c find_first_recursive.c \
 	../../utils/token.c  ./tests/test_parse_table.c -o ./bin/test_parse_table.exe
 
@@ -24,6 +24,6 @@ test_parse_tree:
 	gcc -g create_parse_tree.c create_parse_table.c find_first_and_follow.c \
 	read_grammer.c find_first.c find_follow.c find_first_recursive.c \
 	../lexer/create_token.c ../lexer/get_stream.c ../lexer/get_tokens.c \
-	../lexer/patterns.c ../lexer/remove_comments.c \
+	../lexer/patterns.c ../lexer/remove_comments.c  read_ff.c \
 	../../utils/token.c ../../utils/keyword.c  ../../utils/tree.c \
 	../../utils/stack.c  ./tests/test_parse_tree.c -o ./bin/test_parse_tree.exe
